--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
-    "popper.js": "^1.16.1"
+    "on-change": "^3.0.2",
+    "popper.js": "^1.16.1",
+    "yup": "^0.32.9"
   }
 }
