--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "i18next": "^20.3.1",
     "jquery": "^3.6.0",
     "on-change": "^3.0.2",
     "popper.js": "^1.16.1",
